    always require Metal, ship components and machinery
    Let player choose between runtime of 1 month, 2, 3 or 4 then deliver the output and the station salvage to the colony
    add an intel entry showing the progress

-----------------------o-----------------------
3.1.e - UNRELEASED

Items
Added - Settings for relic component combat drop rates (min FP, destroyed fraction)

Artillery
Added - A shitload of settings to make your bones harder (or weaker)
Added - Sounds for combat weapons (Courtesy of Soren / Harmful Mechanic)
Added - Sounds for campaign weapons (Courtesy of Soren / Harmful Mechanic)
Adjusted - Visual adjustments for mortar explosions

Minefields
Added - Settings

3.1.d
Items
Adjusted - Particle colour now properly works off sun colour
Fixed - Scoop now also scoops from suns that are not the primary star
Fixed - Scoop crash in dual-star systems
Fixed - Scoop crash in nebulas

Courier Port
Fixed - Intel now actually removes itself 7 days after ending (whoops)
Fixed - Intel now properly displays total cost instead of only cargo cost
Note - use this console command to clear all the stuck intel entries (takes 7 days):
runcode com.fs.starfarer.api.impl.campaign.econ.impl.courierPort.intel.ShippingIntel.removeAll();

Embassy
Fixed - Weird copy-paste typo in description (how did that even happen)

Artillery
Added - Indicator telling you if you are being detected by watchtowers
Adjusted - Railgun charge up 3s -> 5s
Adjusted - Railgun damage 8000 -> 2500
Adjusted - Railgun now fires a 3-shot burst
Adjusted - Railgun shot interval 3s -> 10s
Adjusted - Missile tracking range 800su -> 600su
Adjusted - Watchtower hack duration now actually up to 2 months (Was 1)
Adjusted - Watchtower now takes some time to get a target lock, depending on your distance to the tower
Adjusted - Watchtower sensor ping now irregular
Adjusted - Watchtower sensor range range 3000su -> 4000su