@@ -138,9 +138,9 @@
 		"isOrAre":"is",
 		"customDescriptionId":"IndEvo_GachaStation",
 		"interactionImage":"graphics/illustrations/orbital_construction.jpg",
-		"icon":"graphics/icons/IndEvo_station1.png",
-		"iconWidth":10,
-		"iconHeight":10,
+		"icon":"graphics/icons/IndEvo_station2.png",
+		"iconWidth":32,
+		"iconHeight":32,
 		"sprite":"graphics/stations/IndEvo_station_04.png",
 		"spriteWidth":118,
 		"spriteHeight":197,
